--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
+  "homepage": "https://enkikkeli.github.io/project",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"    
   },
   "author": "Onni Riikonen",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^6.1.0",
     "node-sass": "^9.0.0"
   }
 }
